--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -947,10 +947,6 @@
   background-color: #f7f7f7 !important;
   box-shadow: rgb(235 235 235) 0 0 0 1px inset !important;
 }
-.form__select:disabled {
-  cursor: not-allowed !important;
-  opacity: 1 !important;
-}
 .main-content__details-form-host-select-icon-wrapper {
   -webkit-box-pack: center !important;
   -webkit-box-align: center !important;
@@ -13984,26 +13980,6 @@ h3:first-child {
     line-height: 36px !important;
   }
 }
-.form-floating {
-  position: relative !important;
-  display: -webkit-box !important;
-  display: -moz-box !important;
-  display: -ms-flexbox !important;
-  display: -webkit-flex !important;
-  display: flex !important;
-  width: 100% !important;
-  margin: 0 !important;
-  border: none !important;
-  color: #222 !important;
-  background-color: #fff !important;
-  border-radius: 8px !important;
-  box-shadow: inset 0 0 0 1px #b0b0b0 !important;
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    Helvetica Neue, sans-serif !important;
-  font-size: 16px !important;
-  line-height: 20px !important;
-  font-weight: 400 !important;
-}
 ._pabip3 {
   -moz-appearance: none !important;
   appearance: none !important;
@@ -18775,21 +18751,6 @@ full__margin-bottom {
     padding-right: 8px !important;
   }
 }
-.form__input {
-  width: 100% !important;
-  border: none !important;
-  outline: 0 !important;
-  padding: 0 !important;
-  margin: 26px 12px 6px !important;
-  min-height: 1px !important;
-  color: inherit !important;
-  background-color: transparent !important;
-  font-family: inherit !important;
-  font-size: inherit !important;
-  font-weight: inherit !important;
-  line-height: inherit !important;
-  appearance: none !important;
-}
 .account-container__country-code-select {
   position: relative !important;
   width: 100% !important;
@@ -22385,27 +22346,6 @@ html :where(img[class*='wp-image-']) {
 }
 .dir.privacy-sharing__services-divider[class][class] {
   margin-bottom: var(--h-x-sf-jw);
-}
-.form__switch-toggle-checked {
-  -webkit-box-pack: center !important;
-  -webkit-box-align: center !important;
-  background-color: #fff !important;
-  border-radius: 50% !important;
-  border-style: solid !important;
-  border-width: 2px !important;
-  height: 32px !important;
-  left: -1px !important;
-  position: absolute !important;
-  top: -1px !important;
-  width: 32px !important;
-  display: flex !important;
-  align-items: center !important;
-  justify-content: center !important;
-  transition: -ms-transform 250ms ease-in-out,
-    -webkit-transform 250ms ease-in-out, transform 250ms ease-in-out !important;
-  border-color: #222 !important;
-  transform: translate3d(16px, 0, 0) !important;
-  color: #222 !important;
 }
 .privacy-sharing__mobile-body {
   margin-left: auto !important;
@@ -28878,21 +28818,6 @@ tr.hide {
   background-color: #fff !important;
   opacity: 1 !important;
 }
-.form__input-small {
-  width: 100% !important;
-  border: none !important;
-  outline: 0 !important;
-  padding: 0 !important;
-  margin: 12px 12px 10px !important;
-  min-height: 1px !important;
-  color: inherit !important;
-  background-color: transparent !important;
-  font-family: inherit !important;
-  font-size: inherit !important;
-  font-weight: inherit !important;
-  line-height: inherit !important;
-  appearance: none !important;
-}
 ._1w2kwxa {
   clip: rect(0, 0, 0, 0) !important;
   width: 1px !important;
@@ -28906,23 +28831,9 @@ tr.hide {
   color: #222 !important;
   margin-bottom: 8px !important;
 }
-.form__badge {
-  -webkit-box-align: center !important;
-  display: inline-flex !important;
-  align-items: center !important;
-  padding: 12px 14px 12px 16px !important;
-  border-radius: 30px !important;
-  border: 1px solid #b0b0b0 !important;
-  margin-right: 8px !important;
-  margin-bottom: 8px !important;
-}
 .calendar-sideba__qnty-sched {
   font-size: 14px !important;
   line-height: 18px !important;
-}
-.form__badge-btn {
-  height: 16px !important;
-  margin-left: 12px !important;
 }
 ._2lmqao {
   position: relative !important;
@@ -29135,8 +29046,7 @@ tr.hide {
   max-width: 50% !important;
   white-space: nowrap !important;
 }
-._7cmsd4,
-.form__input {
+._7cmsd4 {
   font-size: 16px !important;
   line-height: 20px !important;
   font-weight: 800 !important;
@@ -31649,104 +31559,6 @@ tr.hide {
   line-height: 20px !important;
   font-weight: 400 !important;
 }
-.form-floating__control {
-  position: relative !important;
-  -webkit-flex: 1 1 auto !important;
-  -ms-flex: 1 1 auto !important;
-  flex: 1 1 auto !important;
-  padding: 0 !important;
-}
-.form__select {
-  -moz-appearance: none !important;
-  appearance: none !important;
-  min-height: 56px !important;
-  width: 100% !important;
-  border: none !important;
-  outline: 0 !important;
-  margin: 0 !important;
-  padding-left: 12px !important;
-  padding-right: 36px !important;
-  padding-top: 26px !important;
-  padding-bottom: 10px !important;
-  background-color: transparent !important;
-  color: inherit !important;
-  font-family: inherit !important;
-  font-size: inherit !important;
-  font-weight: inherit !important;
-  line-height: inherit !important;
-  -webkit-appearance: none !important;
-}
-.form__select::-ms-expand {
-  display: none !important;
-}
-.form__select:-moz-focusring {
-  outline-color: transparent !important;
-  color: transparent !important;
-  text-shadow: 0 0 0 #000 !important;
-}
-.form__select::placeholder {
-  color: transparent !important;
-}
-.form__select:disabled {
-  cursor: not-allowed !important;
-}
-.form-floating__addon {
-  -webkit-box-pack: center !important;
-  -ms-flex-pack: center !important;
-  -webkit-box-align: center !important;
-  -ms-flex-align: center !important;
-  position: absolute !important;
-  right: 0 !important;
-  display: -webkit-box !important;
-  display: -moz-box !important;
-  display: -ms-flexbox !important;
-  display: -webkit-flex !important;
-  display: flex !important;
-  -webkit-align-items: center !important;
-  align-items: center !important;
-  -webkit-justify-content: center !important;
-  justify-content: center !important;
-  height: 100% !important;
-  max-width: 50% !important;
-  min-width: 36px !important;
-  padding-right: 12px !important;
-  pointer-events: none !important;
-  color: #222 !important;
-}
-.form-floating__label {
-  position: absolute !important;
-  top: 18px !important;
-  left: 12px !important;
-  right: 12px !important;
-  margin-top: 0 !important;
-  margin-right: 0 !important;
-  margin-bottom: 0 !important;
-  margin-left: 0 !important;
-  padding-top: 0 !important;
-  padding-right: 24px !important;
-  padding-bottom: 0 !important;
-  padding-left: 0 !important;
-  color: #717171 !important;
-  pointer-events: none !important;
-  -webkit-transform-origin: 0 0 !important;
-  -ms-transform-origin: 0 0 !important;
-  transform-origin: 0 0 !important;
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    Helvetica Neue, sans-serif !important;
-  font-size: 16px !important;
-  line-height: 20px !important;
-  -webkit-transition: -webkit-transform 0.15s
-      cubic-bezier(0.455, 0.03, 0.515, 0.955),
-    transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955) !important;
-  -moz-transition: transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955) !important;
-  transition: -ms-transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955),
-    -webkit-transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955),
-    transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955) !important;
-  -webkit-transform: translateY(-8px) scale(0.75) !important;
-  -ms-transform: translateY(-8px) scale(0.75) !important;
-  transform: translateY(-8px) scale(0.75) !important;
-  font-weight: 400 !important;
-}
 ._tddesd {
   position: relative !important;
   cursor: text !important;
@@ -31768,48 +31580,6 @@ tr.hide {
   font-size: 16px !important;
   line-height: 20px !important;
   font-weight: 400 !important;
-}
-.form__input:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0 30px #fff inset !important;
-}
-.form__input:-webkit-autofill:hover {
-  -webkit-box-shadow: 0 0 0 30px #fff inset !important;
-}
-.form__input:-webkit-autofill:focus {
-  -webkit-box-shadow: 0 0 0 30px #fff inset !important;
-}
-.form__input:-webkit-autofill:active {
-  -webkit-box-shadow: 0 0 0 30px #fff inset !important;
-}
-.form__input::-ms-clear {
-  display: none !important;
-}
-.form__input::-webkit-input-placeholder {
-  color: #717171 !important;
-  opacity: 1 !important;
-}
-.form__input::-moz-placeholder {
-  color: #717171 !important;
-  opacity: 1 !important;
-}
-.form__input:-moz-placeholder {
-  color: #717171 !important;
-  opacity: 1 !important;
-}
-.form__input:-ms-input-placeholder {
-  color: #717171 !important;
-  opacity: 1 !important;
-}
-.form__input::placeholder {
-  color: #717171 !important;
-  opacity: 1 !important;
-}
-.form__input:focus {
-  color: #222 !important;
-}
-.form__input::-webkit-inner-spin-button {
-  -webkit-appearance: none !important;
-  margin: 0 !important;
 }
 ._6hkhatt {
   cursor: pointer !important;
@@ -32281,27 +32051,6 @@ tr.hide {
   padding-left: 12px !important;
   margin-right: -6px !important;
   color: #717171 !important;
-}
-.form__input {
-  width: 100% !important;
-  border: none !important;
-  outline: 0 !important;
-  padding-left: 0 !important;
-  padding-right: 0 !important;
-  padding-top: 0 !important;
-  padding-bottom: 0 !important;
-  margin-left: 12px !important;
-  margin-right: 12px !important;
-  margin-top: 26px !important;
-  margin-bottom: 6px !important;
-  min-height: 1px !important;
-  color: inherit !important;
-  background-color: transparent !important;
-  font-family: inherit !important;
-  font-size: inherit !important;
-  font-weight: inherit !important;
-  line-height: inherit !important;
-  -webkit-appearance: none !important;
 }
 ._wfo3ii {
   margin-top: 16px !important;
@@ -43086,26 +42835,6 @@ tr.hide {
 .payment-payout__notice-desc-text {
   margin-top: 16px !important;
 }
-.form__switch-toggle {
-  -webkit-box-pack: center !important;
-  -webkit-box-align: center !important;
-  background-color: #fff !important;
-  border-radius: 50% !important;
-  border-style: solid !important;
-  border-width: 2px !important;
-  height: 32px !important;
-  left: -1px !important;
-  position: absolute !important;
-  top: -1px !important;
-  transform: translate3d(0, 0, 0) !important;
-  width: 32px !important;
-  display: flex !important;
-  align-items: center !important;
-  justify-content: center !important;
-  transition: -ms-transform 250ms ease-in-out,
-    -webkit-transform 250ms ease-in-out, transform 250ms ease-in-out !important;
-  border-color: #b0b0b0 !important;
-}
 ._13fzc4w {
   font-size: 16px !important;
   line-height: 24px !important;
@@ -45025,24 +44754,6 @@ a:hover {
   padding: 4px !important;
   border-radius: 8px !important;
 }
-.form__textarea {
-  color: inherit !important;
-  display: block !important;
-  min-width: 100% !important;
-  max-width: 100% !important;
-  outline: 0 !important;
-  border: none !important;
-  margin: 0 !important;
-  box-sizing: border-box !important;
-  background-color: transparent !important;
-  appearance: none !important;
-  padding: 8px !important;
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    'Helvetica Neue', sans-serif !important;
-  font-size: 16px !important;
-  line-height: 20px !important;
-  font-weight: 400 !important;
-}
 ._1b3feto {
   -webkit-box-pack: justify !important;
   -webkit-box-align: center !important;
@@ -45101,62 +44812,6 @@ a:hover {
 ._1wlfjr {
   padding-bottom: 8px !important;
 }
-.form-floating {
-  position: relative !important;
-  display: flex !important;
-  width: 100% !important;
-  margin: 0 !important;
-  border: none !important;
-  color: #222 !important;
-  background-color: #fff !important;
-  border-radius: 8px !important;
-  box-shadow: rgb(176 176 176) 0 0 0 1px inset !important;
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    'Helvetica Neue', sans-serif !important;
-  font-size: 16px !important;
-  line-height: 20px !important;
-  font-weight: 400 !important;
-}
-.form-floating__control {
-  position: relative !important;
-  flex: 1 1 auto !important;
-  padding: 0 !important;
-}
-.form-floating__label {
-  position: absolute !important;
-  top: 18px !important;
-  left: 12px !important;
-  right: 12px !important;
-  margin: 0 !important;
-  padding: 0 24px 0 0 !important;
-  color: #717171 !important;
-  pointer-events: none !important;
-  transform-origin: 0 0 !important;
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    'Helvetica Neue', sans-serif !important;
-  font-size: 16px !important;
-  line-height: 20px !important;
-  transition: -ms-transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955),
-    -webkit-transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955),
-    transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955) !important;
-  transform: translateY(-8px) scale(0.75) !important;
-  font-weight: 400 !important;
-}
-.form__select {
-  min-height: 56px !important;
-  width: 100% !important;
-  border: none !important;
-  outline: 0 !important;
-  margin: 0 !important;
-  padding: 26px 36px 10px 12px !important;
-  background-color: transparent !important;
-  color: inherit !important;
-  font-family: inherit !important;
-  font-size: inherit !important;
-  font-weight: inherit !important;
-  line-height: inherit !important;
-  appearance: none !important;
-}
 .margin__left-auto {
   margin-left: auto !important;
 }
@@ -45184,21 +44839,6 @@ a:hover {
   border-color: var(--f-k-smk-x) !important;
   background: var(--f-mkcy-f) !important;
   color: var(--f-k-smk-x) !important;
-}
-.form-floating__addon {
-  -webkit-box-pack: center !important;
-  -webkit-box-align: center !important;
-  position: absolute !important;
-  right: 0 !important;
-  display: flex !important;
-  align-items: center !important;
-  justify-content: center !important;
-  height: 100% !important;
-  max-width: 50% !important;
-  min-width: 36px !important;
-  padding-right: 12px !important;
-  pointer-events: none !important;
-  color: #222 !important;
 }
 .place__recommended-no {
   margin-top: 8px !important;
@@ -51557,21 +51197,6 @@ label {
   font-weight: 600 !important;
   text-align: inherit !important;
   outline: 0 !important;
-}
-.form__input {
-  width: 100% !important;
-  border: none !important;
-  outline: 0 !important;
-  padding: 0 !important;
-  margin: 26px 12px 6px !important;
-  min-height: 1px !important;
-  color: inherit !important;
-  background-color: transparent !important;
-  font-family: inherit !important;
-  font-size: inherit !important;
-  font-weight: inherit !important;
-  line-height: inherit !important;
-  appearance: none !important;
 }
 ._13a5kt53 {
   margin-bottom: 16px !important;
